Fixed Text Flowing Off Screen

--- a/settings.css
+++ b/settings.css
@@ -383,7 +383,7 @@
     background-color: #280000;
   }
   .settings-container11 {
-    width: 810px;
+    width: 650px;
     height: 500px;
     display: grid;
     margin-top: var(--dl-space-space-twounits);
